--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     defaultConfig {
         applicationId "com.sahilpaudel.app.advocatus"
 
-        manifestPlaceholders = [onesignal_app_id: "ac588eea-577d-4804-8449-a8724138accf",
+        manifestPlaceholders = [onesignal_app_id               : "ac588eea-577d-4804-8449-a8724138accf",
                                 // Project number pulled from dashboard, local value is ignored.
                                 onesignal_google_project_number: "296638929526"]
 
@@ -25,10 +25,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile files('libs/android-async-http-1.4.4.jar')
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
@@ -36,7 +37,9 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.android.support:design:25.1.0'
     compile 'com.jaredrummler:material-spinner:1.1.0'
-
-
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.android.support:support-v4:25.1.0'
     testCompile 'junit:junit:4.12'
 }
+apply plugin: 'com.google.gms.google-services'
